--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <img class=" img-fluid" src="/monika.github.io/theme/java.png" alt="card image">
+                                    <img class=" img-fluid" src="/monikapatel/theme/java.png" alt="card image">
                                     <h4 class="card-title">Java</h4>
                                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                                     <p class="card-text">Java is object oriented programming language. I have learnt Java during my academics Also I have completed internship in Java for six months.</p>
@@ -84,7 +84,7 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <img class=" img-fluid" src="/monika.github.io/theme/c.png" alt="card image">
+                                    <img class=" img-fluid" src="/monikapatel/theme/c.png" alt="card image">
                                     <h4 class="card-title">C Language</h4>
                                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width:90px;">
                                     <p class="card-text">C programming is considered as the base for other programming languages.C is highly portable and is used for scripting system applications which form a major part of Windows, UNIX, and Linux operating system.</p>
@@ -101,7 +101,7 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <img class=" img-fluid" src="/monika.github.io/theme/database.png" alt="card image">
+                                    <img class=" img-fluid" src="/monikapatel/theme/database.png" alt="card image">
                                     <h4 class="card-title">Database</h4>
                                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width:100px;">
                                     <p class="card-text">Data processing is extremely significant to businesses and companies these days. I am familliar with Relational Database. I am working on Oracle database system.</p>
@@ -119,7 +119,7 @@
                       <div class="frontside">
                           <div class="card">
                               <div class="card-body text-center">
-                                  <img class=" img-fluid" src="/monika.github.io/theme/html.png" alt="card image">
+                                  <img class=" img-fluid" src="/monikapatel/theme/html.png" alt="card image">
                                   <h4 class="card-title">HTML</h4>
                                   <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                                   <p class="card-text">HTML (Hypertext Markup Language) is markup language that is used to structure a web page and its content. I learn HTML during curriculum. To practice it, I tried to build static websites.</p>
@@ -136,7 +136,7 @@
                       <div class="frontside">
                           <div class="card">
                               <div class="card-body text-center">
-                                  <img class=" img-fluid" src="/monika.github.io/theme/css.png" alt="card image">
+                                  <img class=" img-fluid" src="/monikapatel/theme/css.png" alt="card image">
                                   <h4 class="card-title">CSS</h4>
                                   <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width:90px;">
                                   <p class="card-text">CSS (Cascading Style Sheets) is the code that styles web content.CSS is not only simplifies website development, but also maintenance. It saves time and reuse code in multiple HTML pages.</p>
@@ -153,7 +153,7 @@
                       <div class="frontside">
                           <div class="card">
                               <div class="card-body text-center">
-                                  <img class=" img-fluid" src="/monika.github.io/theme/c_logo.png" alt="card image">
+                                  <img class=" img-fluid" src="/monikapatel/theme/c_logo.png" alt="card image">
                                   <h4 class="card-title">C++</h4>
                                   <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width:100px;">
                                   <p class="card-text">C++ is a powerful general-purpose programming language,as an extension of c language. It can be used to develop operating systems, browsers, games, and so on. C++ is an object-oriented programming language.</p>
