--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a class="nav-link" href="#">About</a>
       </li>-->
        <li class="nav-item">
-        <a class="nav-link" href="#contact">Contact me</a>
+        <a class="nav-link" href="#contact">Contact me ()</a>
       </li>
     </ul>
   </div>
